--- a/src/pages/onsite-login/onsite-login.html
+++ b/src/pages/onsite-login/onsite-login.html
@@ -1,19 +1,23 @@
-<!--
-  Generated template for the OnsiteLogin page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
     <ion-navbar>
         <button ion-button menuToggle>
-            <ion-icon name="menu"> </ion-icon>
+            <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title> Login </ion-title>
+        <ion-title>OnSite Login</ion-title>
     </ion-navbar>
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+    <div class="card center-form">
+        <form id="login-form" class="border">
+            <div class="input-group">
+                <label class="label">Username: </label>
+                <input type="email" name="SESAemail" placeholder="name@company.com">
+            </div>
+            <div class="input-group">
+                <label class="label">Password: </label>
+                <input type="Password" name="SESAPassword" placeholder="Password">
+            </div>
+            <button id="login-button" class="button button-block button-ios-secondary">Log In</button>
+        </form>
+    </div>
 </ion-content>
