--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
     <link rel="manifest" href="manifest.json">
     <!-- <meta name="theme-color" content="#4e8ef7"> -->
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
     <script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('service-worker.js')
