--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
     <link rel="manifest" href="manifest.json">
     <!-- <meta name="theme-color" content="#4e8ef7"> -->
     <!-- <script src="cordova.js"></script> -->
-    <script>
+<!--     <script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('service-worker.js')
             .then(() => console.log('service worker installed'))
             .catch(err => console.log('Error', err));
     }
-    </script>
+    </script> -->
     <link href="build/main.css" rel="stylesheet">
 </head>
 
