--- a/src/pages/landing-page/landing.page.html
+++ b/src/pages/landing-page/landing.page.html
@@ -1,58 +1,52 @@
 <ion-header>
   <ion-navbar>
-    <!--<button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>-->
-    <ion-title>SESA OnSiteX</ion-title>
+    <button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>
+    <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding>
-<!-- Colors -->
-<button ion-button (click)="pushPage(0)">Create Account</button>
-
-<button ion-button color="secondary" (click)="pushPage(1)">Login</button>
-
-<button ion-button color="danger">Danger</button>
-
-<button ion-button color="light">Light</button>
-
-<button ion-button color="dark">Dark</button>
-
-<!-- Shapes -->
-<button ion-button full>Full Button</button>
-
-<button ion-button block>Block Button</button>
-
-<button ion-button round>Round Button</button>
-
-<!-- Outline -->
-<button ion-button full outline>Outline + Full</button>
-
-<button ion-button block outline>Outline + Block</button>
-
-<button ion-button round outline>Outline + Round</button>
-
-<!-- Icons -->
-<button ion-button icon-left>
-  <ion-icon name="star"></ion-icon>
-  Left Icon
-</button>
-
-<button ion-button icon-right>
-  Right Icon
-  <ion-icon name="star"></ion-icon>
-</button>
-
-<button ion-button icon-only>
-  <ion-icon name="star"></ion-icon>
-</button>
-
-<!-- Sizes -->
-<button ion-button large>Large</button>
-
-<button ion-button>Default</button>
-
-<button ion-button small>Small</button>
+ <ion-card>
+  <ion-card-header>
+    User Info:
+  </ion-card-header>
+  <ion-list>
+    <ion-item>UserName: <span>  {{username}} </span></ion-item>
+    <ion-item>E-Mail:   <span>  {{email}}    </span></ion-item>
+    <ion-item>Password: <span>  {{password}} </span></ion-item>
+  </ion-list>
+</ion-card>
+  <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm.value)">
+    <ion-list>
+      <ion-item class="form-group">
+        <ion-label for="username">Username</ion-label>
+        <ion-input type="text"
+                   id="username"
+                   [formControl]="myForm.controls['username']"
+                   [(ngModel)]="username">
+        </ion-input>
+      </ion-item>
+      <ion-item class="form-group">
+        <ion-label for="email">E-Mail</ion-label>
+        <ion-input type="text"
+                   id="email"
+                   [formControl]="myForm.controls['email']"
+                   [(ngModel)]="email">
+        </ion-input>
+      </ion-item>
+      <ion-item id="invalid-email"
+                *ngIf="!myForm.controls['email'].valid"> 
+                Invalid email 
+      </ion-item>
+      <ion-item class="form-group">
+        <ion-label for="password">Password</ion-label>
+        <ion-input type="password"
+                   id="password"
+                   [formControl]="myForm.controls['password']"
+                   [(ngModel)]="password">
+        </ion-input>
+      </ion-item>
+      <button type="submit" ion-button [disabled]="!myForm.valid">Submit</button>
+    </ion-list>
+  </form>
 </ion-content>
-  <!--The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>-->
