--- a/src/pages/landing-page/landing.page.html
+++ b/src/pages/landing-page/landing.page.html
@@ -46,7 +46,7 @@
                    [(ngModel)]="password">
         </ion-input>
       </ion-item>
-      <button type="submit" ion-button [disabled]="!myForm.valid">Submit</button>
+      <button type="submit" ion-button full [disabled]="!myForm.valid">Submit</button>
     </ion-list>
   </form>
 </ion-content>
