--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -56,4 +56,13 @@
             </ion-select>-->
         </ion-item>
     </ion-list>
+    <hr />
+    <ion-list>
+        <ion-item><ion-input type="text" value={{date}}></ion-input></ion-item>
+            <p>{{date}}</p>
+        <ion-item>{{dArr}}</ion-item>
+        <ion-item></ion-item>
+        <ion-item></ion-item>
+        <ion-item></ion-item>
+    </ion-list>
 </ion-content>
