--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -4,9 +4,16 @@
             <ion-icon name="menu"></ion-icon>
         </button>
         <h3>{{technician}}</h3>
+            <ion-buttons end>
+                <button ion-button icon-only (click)="addData()"><ion-icon name="add"></ion-icon></button>  
+            </ion-buttons>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-   
+  <ion-list>
+    <ion-item *ngFor="let item of items">
+      {{item.message}}
+    </ion-item>
+  </ion-list>
 </ion-content>
