--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-  <form [formGroup]="onSiteLogin" (ngSubmit)="onSubmit(onSiteLogin.value)" >
+  <!--<form [formGroup]="onSiteLogin" (ngSubmit)="onSubmit(onSiteLogin.value)" >
     <ion-list>
       <ion-item>
         <ion-label floating>Username</ion-label>
@@ -25,6 +25,6 @@
     <div padding>
       <button ion-button primary block large type="submit">Sign In</button>
     </div>
-  </form>
+  </form>-->
 
 </ion-content>
