update framework n sich

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,37 +1,22 @@
 <ion-header>
-    <ion-navbar>
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>{{title}}</ion-title>
-    </ion-navbar>
+  <ion-navbar>
+    <ion-title>
+      {{title}}
+    </ion-title>
+  </ion-navbar>
 </ion-header>
+
 <ion-content padding>
-    <ion-list no-border>
-        <ion-list-header color="dark">{{today}}</ion-list-header>
-        <button ion-item icon-left color="Primary" (click)="newReport()">
-            <ion-icon name="document" color="splash">
-            </ion-icon>New<ion-note item-right color="splash">Create New Work Order</ion-note>
-        </button>
-        <button ion-item icon-left color="Primary" (click)="openReports()">
-            <ion-icon name="create" color="secondary"></ion-icon>Edit<ion-note item-right color="secondary">Open Work Orders</ion-note>
-        </button>
-        <hr>
-        <ion-list-header color="dark">Schedule/Past Reports</ion-list-header>
-        <button ion-item icon-left color="Primary" (click)="viewCalendar()">
-            <ion-icon name="calendar" color="favorite"></ion-icon>Schedule<ion-note item-right color="favorite">Calendar View</ion-note>
-        </button>
-        <hr>
-        <ion-list-header color="dark">Report: Technician Information</ion-list-header>
-        <button ion-item icon-left color="Primary" (click)="shiftsPage()"><ion-icon name="clock" color="secondary">
-            </ion-icon>Shift<ion-note item-right color="secondary">Shift Info</ion-note></button>
-        <button ion-item icon-left color="Primary" (click)="settings()"><ion-icon name="settings" color="secondary">
-            </ion-icon>Settings<ion-note item-right color="secondary">User/Report Settings</ion-note>
-        </button>
-        <hr>
-        <ion-list-header color="dark">Complete Shift:</ion-list-header>
-        <button ion-item icon-left color="Primary" (click)="uploadReports()">
-            <ion-icon name="cloud-upload" color="favorite"></ion-icon>Upload<ion-note item-right color="favorite">Upload Reports</ion-note>
-        </button>
-    </ion-list>
+  <button ion-button block color="secondary" (click)="onLogin()"> Login </button>
+  <button ion-button block color="secondary" (click)="onSettings()"> Settings </button>
+  <button ion-button block color="secondary" (click)="onNewWorkOrder()"> New WorkOrder Short </button>
 </ion-content>
+<!--
+  (click)="onNewWorkOrder()"
+  (click)="navigateTo('WorkOrder')"
+    onNewWorkOrder() {this.navCtrl.push('Work Order Form', {mode: 'New'});}
+  onLogin() {this.navCtrl.push('Login');}
+  onNewJobForm() {this.navCtrl.push('Work Order', {mode: 'New'});}
+  onSettings() {this.navCtrl.push('Report Settings');}
+  <button ion-button block color="secondary" (click)="onNewJobForm()"> New WorkOrder Long </button>
+-->
