--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,30 +1,34 @@
+<!--
+  Generated template for the Login page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>{{title}}</ion-title>
+    <ion-title>login</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
+  <ion-list>
 
-  <!--<form [formGroup]="onSiteLogin" (ngSubmit)="onSubmit(onSiteLogin.value)" >
-    <ion-list>
-      <ion-item>
-        <ion-label floating>Username</ion-label>
-        <ion-input id="username" [formControl]="username" type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label floating>Username</ion-label>
+      <ion-input type="text" value=""></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input id="password" [formControl]="password" type="password" ></ion-input>
-      </ion-item>
-    </ion-list>
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password" value=""></ion-input>
+    </ion-item>
 
-    <div padding>
-      <button ion-button primary block large type="submit">Sign In</button>
-    </div>
-  </form>-->
+  </ion-list>
 
+  <div padding>
+    <button ion-button color="primary" block>Sign In</button>
+  </div>
 </ion-content>
