--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,68 +1,72 @@
+<!--
+  Generated template for the Settings page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
-    <ion-navbar>
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>
-            {{title}}
-        </ion-title>
-    </ion-navbar>
+
+  <ion-navbar>
+    <ion-title> {{title}} </ion-title>
+  </ion-navbar>
+
 </ion-header>
+
+
 <ion-content padding>
+  <form [formGroup]="techSettings" (ngSubmit)="onSubmit()">
     <ion-list>
-        <ion-item>
-            <ion-label stacked>Company</ion-label>
-            <ion-input type="text" value={{company}}></ion-input>
-            <!--<ion-select >{{company}}
-                <ion-option *ngFor="let company of clntCmpny">
-                    {{company}}
-                </ion-option>
-            </ion-select>-->
-        </ion-item>
-        <ion-item>
-            <ion-label stacked>WorkSite Main</ion-label>
-            <ion-input type="text" value={{loc1}}></ion-input>
-            <!--<ion-select [(ngModel)]="loc1" >{{loc1}}
-                <ion-option *ngFor="let loc1 of locPrimry">
-                    {{loc1}}
-                </ion-option>
-            </ion-select>-->
-        </ion-item>
-        <ion-item>
-            <ion-label stacked>WorkSite Secondary Location Name</ion-label>
-            <ion-input type="text" value={{loc2}} placeholder="if none, leave blank"></ion-input>
-            <!--<ion-select [(ngModel)]="loc2" >{{loc2}}
-                <ion-option *ngFor="let loc2 of locScndry">
-                    {{loc2}}
-                </ion-option>
-            </ion-select>-->
-        </ion-item>
-        <ion-item>
-            <ion-label stacked>Technician Type</ion-label>
-            <ion-input type="text" value={{techClass}}></ion-input>
-            <!--<ion-select [(ngModel)]="techClass" >{{techClass}}
-                <ion-option *ngFor="let techClass of userClass">
-                    {{techClass}}
-                </ion-option>
-            </ion-select>-->
-        </ion-item>
-        <ion-item>
-            <ion-label stacked>Report Hours Classification</ion-label>
-            <ion-input type="text" value={{hrsClass}} [(ngModel)]='hrsClass' ></ion-input>
-            <!--<ion-select [(ngModel)]="hrsClass" >{{hrsClass}}
-                <ion-option *ngFor="let hrsClass of pyrlClass">
-                    {{hrsClass}}
-                </ion-option>
-            </ion-select>-->
-        </ion-item>
+      <ion-item>
+        <ion-label floating>FIRST NAME:</ion-label>
+        <ion-input type='text' formControlName='firstName'>{{firstName}} </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>LAST NAME:</ion-label>
+        <ion-input type='text' formControlName='lastName'>{{lastName}} </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>CLIENT:</ion-label>
+        <ion-select formControlName='client'>
+          <ion-option *ngFor='let client of selClient' [value]='client'> {{client}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>LOCATION:</ion-label>
+        <ion-select formControlName='location'>
+          <ion-option *ngFor='let location of selLocation' [value]='location'> {{location}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>LOCID:</ion-label>
+        <ion-select formControlName='locID'>
+          <ion-option *ngFor='let locID of selLocID' [value]='locID'> {{locID}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>LOC2ND:</ion-label>
+        <ion-select formControlName='loc2nd'>
+          <ion-option *ngFor='let loc2nd of selLoc2nd' [value]='loc2nd'> {{loc2nd}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>SHIFT:</ion-label>
+        <ion-select formControlName='shift'>
+          <ion-option *ngFor='let shift of selShift' [value]='shift'> {{shift}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>SHIFT LENGTH:</ion-label>
+        <ion-select formControlName='shiftLength'>
+          <ion-option *ngFor='let shiftLength of selShiftLength' [value]='shiftLength'> {{shiftLength}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>SHIFT START TIME:</ion-label>
+        <ion-select formControlName='shiftStartTime'>
+          <ion-option *ngFor='let shiftStartTime of selShiftStartTime' [value]='shiftStartTime'> {{shiftStartTime}} </ion-option>
+        </ion-select>
+      </ion-item>
     </ion-list>
-    <hr />
-    <ion-list>
-        <ion-item><ion-input type="text" value={{date}}></ion-input></ion-item>
-            <p>{{date}}</p>
-        <ion-item>{{dArr}}</ion-item>
-        <ion-item></ion-item>
-        <ion-item></ion-item>
-        <ion-item></ion-item>
-    </ion-list>
+    <button type="submit" ion-button block>Update {{title}} </button>
+  </form>
 </ion-content>
