minor updates n sich

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content padding>
   <button ion-button block color="secondary" (click)="onLogin()"> Login </button>
   <button ion-button block color="secondary" (click)="onSettings()"> Settings </button>
-  <button ion-button block color="secondary" (click)="onNewWorkOrder()"> New WorkOrder Short </button>
+  <button ion-button block color="secondary" (click)="onNewWorkOrder()"> New WorkOrder </button>
 </ion-content>
 <!--
   (click)="onNewWorkOrder()"
