Added login and db services and PouchDB plugins
Yep.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,17 +18,17 @@
 
     <ion-item>
       <ion-label floating>Username</ion-label>
-      <ion-input type="text" value=""></ion-input>
+      <ion-input type="text" value="" [(ngModel)]="username"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Password</ion-label>
-      <ion-input type="password" value=""></ion-input>
+      <ion-input type="password" value="" [(ngModel)]="password"></ion-input>
     </ion-item>
 
   </ion-list>
 
   <div padding>
-    <button ion-button color="primary" block>Sign In</button>
+    <button ion-button color="primary" block (click)="loginAttempt()">Sign In</button>
   </div>
 </ion-content>
