splashify.resources n sich

--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -20,11 +20,11 @@
 
       <ion-item>
         <ion-label>Start Date</ion-label>
-        <ion-datetime displayFormat="DDD, MMM DD YYYY" yearValues="2017" formControlName="rprtDate">{{rprtDate| date:'EEE, MMM dd yyyy'}}</ion-datetime>
+        <ion-datetime displayFormat="DDD, MMM DD YYYY" yearValues="2017" formControlName="rprtDate" >{{rprtDate}}</ion-datetime>
       </ion-item>
       <ion-item>
         <ion-label>Start Time</ion-label>
-        <ion-datetime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts">{{timeStarts| date:'HH:mm'}}</ion-datetime>
+        <ion-datetime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts">{{timeStarts}}</ion-datetime>
       </ion-item>
       <ion-item>
         <ion-label floating>JOB HRS: (Decimal Hours) </ion-label>
