--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding *ngIf="techSettingsReady">
   <form [formGroup]="techSettings" (ngSubmit)="onSubmit()">
     <ion-list>
       <ion-item>
