--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,10 +6,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <button ion-button block color="secondary" (click)="onLogin()"> Login </button>
-  <button ion-button block color="secondary" (click)="onSettings()"> Settings </button>
-  <button ion-button block color="secondary" (click)="onNewWorkOrder()"> New WorkOrder </button>
+<ion-content padding *ngIf="showPage">
+  <button ion-button block color="secondary" *ngIf="!userLoggedIn" (click)="onLogin()"> Login </button>
+  <button ion-button block color="secondary" *ngIf="userLoggedIn" [ngClass]="isFirstItem()" (click)="onSettings()"> Settings </button>
+  <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="onNewWorkOrder()"> New WorkOrder </button>
 </ion-content>
 <!--
   (click)="onNewWorkOrder()"
