Removed theme, added global class, mostly fixed SecureStorage for Android
Yeah.

--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -12,7 +12,9 @@
 
 </ion-header>
 
-
+<div *ngIf="showSpinner">
+  <ion-spinner></ion-spinner>
+</div>
 <ion-content padding>
   <p class="hdrDate"> Today: <span class="date">{{ setDate | date:'EEE, MMM dd yyyy'}}</span>, Time: <span class="time"> {{setDate| date:'HH:mm'}} </span>    </p>
 
