--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -25,11 +25,11 @@
       </ion-item>
       <ion-item>
         <ion-label>Start Date</ion-label>
-        <ion-datetime #reportDate displayFormat="DDD, MMM DD YYYY" yearValues="2017" formControlName="rprtDate"></ion-datetime>
+        <ion-datetime #reportDate displayFormat="DDD, MMM DD YYYY" yearValues="2017" formControlName="rprtDate">{{rprtDate}}</ion-datetime>
       </ion-item>
       <ion-item>
         <ion-label>Start Time</ion-label>
-        <ion-datetime #startTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts"></ion-datetime>
+        <ion-datetime #startTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts">{{timeStarts}}</ion-datetime>
       </ion-item>
       <ion-item>
         <ion-label floating>JOB HRS: (Decimal Hours) </ion-label>
@@ -58,5 +58,5 @@
 
 <!--
    placeholder="{{ setDate | date:'EEE, MMM dd yyyy'}}"
-   placeholder="{{setDate| date:'HH:mm'}}" 
+   placeholder="{{setDate| date:'HH:mm'}}"
 -->
