Broke server services out of authentication services
Also fixed work order time regex problem

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,7 +33,7 @@
   </ion-list>
 
   <div padding>
-    <button ion-button color="primary" block (click)="loginAttempt()">Sign In</button>
+    <button ion-button color="primary" block (click)="loginClicked()">Sign In</button>
   </div>
 </ion-content>
 
