--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,7 @@
   <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="onNewWorkOrder()"> New WorkOrder </button>
   <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="logoutOfApp()"> Logout </button>
   <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="getReportHistory()"> Report History </button>
+  <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="importBulkReports()"> Import Bulk Reports </button>
 
 </ion-content>
 <!--
