Edit Report submit button working, delete button invisible
Hooray

--- a/src/pages/edit-report/edit-report.html
+++ b/src/pages/edit-report/edit-report.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>Edit Report</ion-title>
+    <ion-buttons end>
+    	<button ion-button icon-only (click)="deleteWorkOrder(workOrder)">
+    		<ion-icon name="ion-trash-a"></ion-icon>
+    	</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
