--- a/src/pages/edit-report/edit-report.html
+++ b/src/pages/edit-report/edit-report.html
@@ -1,21 +1,3 @@
-<!--
-  Generated template for the EditReportPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<!--<ion-header>
-
-  <ion-navbar>
-    <ion-title>Edit</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="deleteWorkOrder(workOrder)">
-        <ion-icon name="ion-trash-a"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
-</ion-header>-->
-
 <ion-header>
   <ion-toolbar>
     <ion-title>{{title}}</ion-title>
@@ -63,6 +45,6 @@
         <div>Error submitting work order. Please try again.</div>
       </ion-item>
     </ion-list>
-    <button type="submit" ion-button block>Submit {{title}} </ion-icon></button>
+    <button type="submit" ion-button block>Submit {{title}} </button>
   </form>
 </ion-content>
