--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -9,6 +9,7 @@
 
 <ion-content padding>
   <ion-list>
+    <!-- <ion-item block *ngIf="!items.length">No Work Orders</ion-item> -->
     <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
       <ion-icon [name]="item.icon" item-left></ion-icon>
       {{item.rprtDate}}
