--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,7 +33,7 @@
   </ion-list>
 
   <div padding>
-    <button ion-button color="primary" block color="dark" (click)="loginClicked()">Sign In</button>
+    <button ion-button color="primary" block color="favorite" (click)="loginClicked()">Sign In</button>
   </div>
 </ion-content>
 
