--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -67,6 +67,6 @@
         </ion-select>
       </ion-item>
     </ion-list>
-    <button type="submit" ion-button block color="dark">Update {{title}} </button>
+    <button type="submit" ion-button block color="favorite">Update {{title}} </button>
   </form>
 </ion-content>
