--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -48,7 +48,7 @@
         <div>Error submitting work order. Please try again.</div>
       </ion-item>
     </ion-list>
-    <button type="submit" ion-button block color="dark">Submit {{title}} </button>
+    <button type="submit" ion-button block color="favorite">Submit {{title}} </button>
   </form>
 </ion-content>
 
