--- a/src/pages/edit-report/edit-report.html
+++ b/src/pages/edit-report/edit-report.html
@@ -45,6 +45,6 @@
         <div>Error submitting work order. Please try again.</div>
       </ion-item>
     </ion-list>
-    <button type="submit" ion-button block>Submit {{title}} </button>
+    <button type="submit" ion-button block color="favorite">Submit {{title}} </button>
   </form>
 </ion-content>
