--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,39 +1,39 @@
 <!--
-  Generated template for the Login page.
+	Generated template for the Login page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+	See http://ionicframework.com/docs/components/#navigation for more info on
+	Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>{{title}}</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<ion-title>{{title}}</ion-title>
+	</ion-navbar>
 
 </ion-header>
-
-
-<ion-content padding>
-  <ion-list>
-
-    <ion-item *ngIf="loginError" color="danger">
-      <span class="center error">Username or password error!</span>
-    </ion-item>
-
-    <ion-item>
-      <ion-label floating>Username</ion-label>
-      <ion-input type="text" value="" [(ngModel)]="username"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password" value="" [(ngModel)]="password"></ion-input>
-    </ion-item>
-
-  </ion-list>
-
-  <div padding>
-    <button ion-button color="primary" block color="favorite" (click)="loginClicked()">Sign In</button>
-  </div>
+ <ion-content padding>
+	<form [formGroup]="LoginForm" (ngSubmit)="onSubmit()">
+		<ion-list>
+			<ion-item *ngIf="loginError" color="danger">
+				<span class="center error">Username or password incorrect!</span>
+			</ion-item>
+			<ion-item>
+				<ion-label floating>Username</ion-label>
+				<ion-input type="text" formControlName="formUser" [class.invalid]="!LoginForm.controls.formUser.valid && (LoginForm.controls.formUser.dirty || submitAttempt)"></ion-input>
+			</ion-item>
+			<ion-item *ngIf="(!LoginForm.controls.formUser.valid && (LoginForm.controls.formUser.dirty || submitAttempt))">
+				<p>Please enter a valid username.</p>
+			</ion-item>
+			<ion-item>
+				<ion-label floating>Password</ion-label>
+				<ion-input type="password" formControlName="formPass" [class.invalid]="!LoginForm.controls.formPass.valid && (LoginForm.controls.formPass.dirty || submitAttempt)"></ion-input>
+			</ion-item>
+			<ion-item *ngIf="(!LoginForm.controls.formPass.valid && (LoginForm.controls.formPass.dirty || submitAttempt))">
+				<p>Please enter a valid password.</p>
+			</ion-item>
+			<div padding></div>
+			<button ion-button color="primary" block color="favorite" [disabled]="(!LoginForm.controls.formUser.valid && (LoginForm.controls.formUser.dirty || submitAttempt)) || (!LoginForm.controls.formPass.valid && (LoginForm.controls.formPass.dirty || submitAttempt))">Sign In</button>
+		</ion-list>
+	</form>
 </ion-content>
 
