--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -13,9 +13,9 @@
 </ion-header>
 
 <ion-content padding>
-  <p class="hdrDate"> Today: <span class="date">{{ setDate | date:'EEE, MMM dd yyyy'}}</span>, Time: <span class="time"> {{setDate| date:'HH:mm'}} </span>    </p>
+  <p class="hdrDate"> Today: <span class="date">{{ setDate | date:'EEE, MMM dd yyyy'}}</span>, Time: <span class="time"> {{setDate| date:'HH:mm'}} </span></p>
 
-  <form [formGroup]="workOrder" (ngSubmit)="onSubmit()">
+  <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()">
     <ion-list>
       <ion-item>
         <ion-input type='text' formControlName="timeStamp"></ion-input>
@@ -29,9 +29,21 @@
         <ion-datetime #startTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts"></ion-datetime>
       </ion-item>
       <ion-item>
-        <ion-label floating>JOB HRS: (Decimal Hours) </ion-label>
+        <ion-label>Job Hours</ion-label>
+        <ion-datetime #repairHrs displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="repairHrs"></ion-datetime>
+      </ion-item>
+      <ion-item>
+        <ion-label>End Time</ion-label>
+        <ion-datetime #endTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeEnds"></ion-datetime>
+      </ion-item>
+<!--       <ion-item>
+        <ion-label floating>Job Hours (how long)</ion-label>
         <ion-input type='number' formControlName='repairHrs'></ion-input>
       </ion-item>
+      <ion-item>
+        <ion-label floating>End Time</ion-label>
+        <ion-input type='number' formControlName='repairHrs'></ion-input>
+      </ion-item> -->
       <ion-item>
         <ion-label floating>UNIT No.</ion-label>
         <ion-input type='text' formControlName='uNum'></ion-input>
