logout/terminate/settings n sich

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
     </ion-title>
     <ion-buttons end>
       <button ion-button icon-only color="dark">
-        <ion-icon name="close"></ion-icon>
+        <ion-icon name="close" (click)="terminateApp()"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -16,19 +16,23 @@
 
 <ion-content padding *ngIf="showPage" class="header-exists">
   <button ion-button block color="secondary" *ngIf="!userLoggedIn" (click)="onLogin()"> Login </button>
-  <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="onSettings()"> Settings </button>
+  <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="onSettings()"> Tech Report Settings </button>
   <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="onNewWorkOrder()"> New WorkOrder </button>
   <button ion-button block color="secondary" *ngIf="userLoggedIn" (click)="getReportHistory()"> Report History </button>
-   <button ion-button block color="secondary" > Close OnSiteX App </button> 
   <button ion-button block color="secondary" class="logout-button" *ngIf="userLoggedIn" (click)="logoutOfApp()"> Logout </button>
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
-    <ion-buttons class="endButtons" end *ngIf="userLoggedIn && userIsDeveloper">
-      <button class="endSingleButton" ion-button icon-only (click)="openDevSettings()">
-        <ion-icon name="options"></ion-icon>
+    <ion-buttons start>
+      <button ion-button icon-only color="dark" (click)="openDevSettings()">
+        <ion-icon name="settings"></ion-icon>
       </button>
     </ion-buttons>
+      <ion-buttons class="endButtons" end *ngIf="userLoggedIn && userIsDeveloper">
+        <button class="endSingleButton" ion-button icon-only (click)="openDevSettings()">
+        <ion-icon name="options"></ion-icon>
+      </button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-footer>
