logout button n sich

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,7 +25,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons start>
-      <button ion-button icon-only color="dark" (click)="openDevSettings()">
+      <button ion-button icon-only color="dark" (click)="navToSettings()">
         <ion-icon name="settings"></ion-icon>
       </button>
     </ion-buttons>
