--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -13,7 +13,7 @@
 <ion-content padding>
   <p class="hdrDate"> Today: <span class="date">{{ setDate | date:'EEE, MMM dd yyyy'}}</span>, Time: <span class="time"> {{setDate| date:'HH:mm'}} </span></p>
 
-  <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()" *ngIf="dataReady">
     <ion-list>
       <ion-item>
         <ion-input type='text' formControlName="timeStamp"></ion-input>
@@ -21,17 +21,17 @@
       <ion-item>
         <ion-label>Shift Date</ion-label>
         <ion-select #shiftDate formControlName="rprtDate">
-          <ion-option class="shift-select" *ngFor="let shift of shifts" formControlName="selected_shift" [value]="selectedShift">{{shift.getShiftDescription()}}</ion-option>
+          <ion-option class="shift-select" *ngFor="let shift of shifts" [value]="selectedShift">{{shift.getShiftDescription()}}</ion-option>
         </ion-select>
       </ion-item>
-      </ion-item>
-      <ion-item>
+      <!--<ion-item>
         <ion-label>Repair Time</ion-label>
         <ion-numeric item-content displayFormat="xx" formControlName="repair_time"></ion-numeric>
-      </ion-item>
+      </ion-item>-->
       <ion-item>
         <ion-label>Start Time</ion-label>
-        <ion-datetime #startTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts"></ion-datetime>
+        <!--<ion-datetime #startTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeStarts"></ion-datetime>-->
+        <ion-datetime #startTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45"></ion-datetime>
       </ion-item>
       <ion-item>
         <ion-label>Job Hours</ion-label>
@@ -41,14 +41,6 @@
         <ion-label>End Time</ion-label>
         <ion-datetime #endTime displayFormat="HH:mm" pickerFormat="HH:mm" minuteValues="00,15,30,45" formControlName="timeEnds"></ion-datetime>
       </ion-item>
-<!--       <ion-item>
-        <ion-label floating>Job Hours (how long)</ion-label>
-        <ion-input type='number' formControlName='repairHrs'></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label floating>End Time</ion-label>
-        <ion-input type='number' formControlName='repairHrs'></ion-input>
-      </ion-item> -->
       <ion-item>
         <ion-label floating>UNIT No.</ion-label>
         <ion-input type='text' formControlName='uNum'></ion-input>
