--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,5 +15,5 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button color="secondary" class="logout-button"  (click)="logoutOfApp()"> Logout </button>
+  <button ion-button color="secondary" class="logout-button"  (click)="confirmLogout()"> Logout </button>
 </ion-content>
